# KHub

./: README.md  pnpm-lock.yaml
KHub/: package.json
KHub/src-tauri/: Cargo.toml  tauri.conf.json
KHub/src-tauri/src/Extraction/: README.md
resources/: config.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/extraction/: README.md  audio.rs  common.rs  mod.rs  subtitles.rs  types.rs
src-tauri/src/kore/: config.rs
src/lib/: Greet.svelte
